--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "react": "17.0.2",
     "react-native": "0.67.3",
-    "react-native-camera": "^4.2.1"
+    "react-native-camera": "^4.2.1",
+    "react-native-image-crop-picker": "^0.37.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
